--- a/Shop/app/src/main/res/layout/activity_password.xml
+++ b/Shop/app/src/main/res/layout/activity_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".NameActivity">
+    tools:context=".personal.PasswordActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarAccount"
@@ -36,10 +36,9 @@
 
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#6B6A6A"
-                android:hint="Nhập vào đây"
                 android:textSize="20sp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
